# MyRetail

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CONTRIBUTING.md  README.md  package-lock.json  package.json
services/api/: .env.example  Dockerfile  openapi.sha256  pyproject.toml  requirements-bootstrap.in  sbom-migrations.cdx.json  sbom.cdx.json
services/api/scripts/: production_state_drill.py  supply_chain.py  validate_production_evidence.py
services/api/src/myretail_api/: __init__.py  config.py  dependencies.py  http_security.py  idempotency.py  main.py  pos_service.py  pos_store.py  rate_limit.py  security.py  tenancy.py
services/api/src/myretail_api/clients/: __init__.py  erpnext.py
services/api/src/myretail_api/migrations/: __init__.py  cli.py  env.py  settings.py
services/api/src/myretail_api/models/: auth.py  pos.py  products.py  purchases.py  stock.py
services/api/src/myretail_api/routers/: auth.py  health.py  pos.py  products.py  purchases.py  stock.py
services/api/src/myretail_api/state/: __init__.py  idempotency.py  lifespan.py  monitor.py  pos_coordination.py  pos_repository.py  postgres.py  tls.py  (+5 more)
services/api/tests/: test_auth.py  test_erpnext_bootstrap.py  test_erpnext_client.py  test_health.py  test_http_security.py  test_idempotency_repository.py  test_migration_settings.py  test_openapi_contract.py  test_pos.py  test_pos_coordination_repository.py  test_pos_projection_repository.py  test_postgresql_foundation.py  test_production_artifacts.py  test_production_evidence.py  test_products.py  test_purchases.py  test_rate_limit.py  test_return_integrity_foundation.py  test_session_repository.py  test_state_foundation.py  test_state_monitor.py  test_state_preflight.py  test_stock.py  test_tenant_isolation.py
services/api/tests/postgresql/: bootstrap_roles.sql
(+162 files in other folders)
