[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myretail-api"
version = "0.1.0"
description = "MyRetail API gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "httpx==0.28.1",
    "pydantic-settings==2.14.2",
    "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.4",
    "pytest==9.1.1",
    "ruff==0.15.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/myretail_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
